FSA-69: Sticky element overflow fixed, larger button text style, advanced search button text styles

--- a/drupal/web/themes/custom/fsa/src/css/base.css
+++ b/drupal/web/themes/custom/fsa/src/css/base.css
@@ -254,7 +254,7 @@ input, textarea, select {
   max-width: 100%;
   font-size: 1em;
   padding: 0.5em;
-  border-radius: 0.1em;
+  border-radius: 0.15em;
   box-shadow: 0em 0em 0em 0.1em var(--color-black);
 
   &:focus {
@@ -304,8 +304,9 @@ input[type="checkbox"]:focus + label {
 input[type="radio"] + label,
 input[type="checkbox"] + label {
   position: relative;
+  font-size: 1em;
   padding-left: calc(1em + 1em);
-  @mixin responsive-declaration padding-left, 35px, 30px;
+  padding-left: 38px;
   padding-top: 0.3em;
   @mixin responsive-declaration padding-top, 0.7em, 0.3em;
   @mixin responsive-declaration padding-bottom, 0.5em, 0em;
@@ -317,18 +318,12 @@ input[type="checkbox"] + label:before,
 input[type="checkbox"] + label:after  {
   content: "";
   display: block;
-  width: 15px;
-  height: 15px;
-  @mixin responsive-declaration width, 20px, 15px;
-  @mixin responsive-declaration height, 20px, 15px;
+  width: 20px;
+  height: 20px;
   position: absolute;
   left: 0;
   top: 50%;
   transform: translateY(-50%);
-  /*transition:
-    box-shadow 0.2s ease-in-out,
-    background-color 0.2s ease-in-out,
-    transform 2s ease-in-out;*/
 }
 
 input[type="radio"] {
@@ -353,7 +348,7 @@ input[type="radio"] {
 input[type="checkbox"] {
   & + label:before {
     box-shadow: inset 0em 0em 0em 0.1em currentColor;
-    border-radius: 0.1em;
+    border-radius: 0.15em;
   }
 
   & + label:after {
