--- a/drupal/web/themes/custom/fsa/src/css/ratings.css
+++ b/drupal/web/themes/custom/fsa/src/css/ratings.css
@@ -40,6 +40,8 @@
     top: 0;
     left: 0;
     width: 20em;
+    height: 100vh;
+    overflow: auto;
   }
 
   @media (--breakpoint-lg) {
@@ -68,6 +70,7 @@
   padding: 1em 0;
   margin-bottom: 1em;
   box-shadow: 0 -0.1em 0 0 var(--color-lighter-gray);
+  text-transform: uppercase;
 
   @media (--breakpoint-md) {
     box-shadow: none;
